--- a/Fan_Doom/core/templates/core/login.html
+++ b/Fan_Doom/core/templates/core/login.html
@@ -44,6 +44,7 @@
             margin-bottom: 1.2rem;
             background: #f9fafb;
             font-size: 1rem;
+            box-sizing: border-box;
         }
         .login-form button {
             width: 100%;
